# voice-rag

./: CONTRIBUTING.md  pyproject.toml  run.py  setup.py  test_generation.py  verify.py
app/: main.py  models_init.py  utils.py
app/api/v1/: endpoints.py  schemas.py
app/core/: config.py  logging_config.py
app/services/: audio_service.py  document_service.py  rag_llm_service.py
docs/: README.md
docs/images/: README.md
faiss_index/: index.faiss  index.pkl
static/: index.html
static/css/: animations.css  style.css
static/gifs/: README.md
static/js/: script.js
